# server/openapi/openapi.yml
@@ -13,6 +13,14 @@ paths:
     $ref: ./paths/api/v1/single-player-games/round-start.yml
   /api/v1/single-player-games/{gameId}/rounds/{roundNumber}/guesses:
     $ref: ./paths/api/v1/single-player-games/guesses.yml
+  /api/v1/daily-challenge-games:
+    $ref: ./paths/api/v1/daily-challenge-games/index.yml
+  /api/v1/daily-challenge-games/today:
+    $ref: ./paths/api/v1/daily-challenge-games/today.yml
+  /api/v1/daily-challenge-games/{gameId}/rounds/{roundNumber}/start:
+    $ref: ./paths/api/v1/daily-challenge-games/round-start.yml
+  /api/v1/daily-challenge-games/{gameId}/rounds/{roundNumber}/guesses:
+    $ref: ./paths/api/v1/daily-challenge-games/guesses.yml
   /api/v1/users/me:
     $ref: ./paths/api/v1/users/me.yml
   /api/v1/users/{userId}:
@@ -24,6 +32,12 @@ components:
       scheme: bearer
       bearerFormat: Firebase ID token
   schemas:
+    CreateDailyChallengeGameResponse:
+      $ref: ./components/schemas/create-daily-challenge-game-response.yml
+    CreateDailyChallengeGameGuessRequest:
+      $ref: ./components/schemas/create-daily-challenge-game-guess-request.yml
+    CreateDailyChallengeGameGuessResponse:
+      $ref: ./components/schemas/create-daily-challenge-game-guess-response.yml
     CreateSinglePlayerGameResponse:
       $ref: ./components/schemas/create-single-player-game-response.yml
     CreateSinglePlayerGameGuessRequest:
@@ -56,3 +70,7 @@ components:
       $ref: ./components/schemas/update-user-response.yml
     StartSinglePlayerGameRoundResponse:
       $ref: ./components/schemas/start-single-player-game-round-response.yml
+    StartDailyChallengeGameRoundResponse:
+      $ref: ./components/schemas/start-daily-challenge-game-round-response.yml
+    GetTodayDailyChallengeResponse:
+      $ref: ./components/schemas/get-today-daily-challenge-response.yml
